# leetha

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  leetha.service  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-04-05-identity-fingerprint-migration.md
frontend/src/: App.tsx
frontend/src/hooks/: use-websocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AttackSurface.tsx  Console.tsx  Dashboard.tsx  Devices.tsx  Interfaces.tsx  Patterns.tsx  Settings.tsx  ThreatDetection.tsx  Topology.tsx
sensor/: Cargo.toml
sensor/src/: config.rs  embedded.rs  main.rs
spec/: test_dhcp_anomaly_scheduling.py  test_metrics.py  test_notifications.py  test_platform.py
spec/auth/: test_middleware_requests.py  test_tokens.py
spec/capture/: test_banner_connections.py  test_banner_dedup.py  test_remote_build.py  test_remote_ssh.py
spec/evidence/: test_evidence_cap.py
spec/processors/: test_banner_processor.py
spec/rules/: test_identity_shift.py
src/leetha/: app.py  cli.py  config.py  connection_type.py  console.py  metrics.py  notifications.py  platform.py  topology.py
src/leetha/analysis/: attack_surface.py
src/leetha/auth/: middleware.py
src/leetha/capture/: engine.py  interfaces.py
src/leetha/core/: pipeline.py
src/leetha/evidence/: engine.py  hostname.py
src/leetha/fingerprint/: evidence.py  lookup.py
src/leetha/patterns/: vendors.py
src/leetha/processors/: banner.py  discovery_enhanced.py  iot_scada.py  names.py  network.py  passive.py  services.py
src/leetha/rules/: discovery.py
(+177 files in other folders)
